[package]
name = "data_validator"
version = "0.1.0"
edition = "2024"

[dependencies]
bytes = "1.11.0"
clap = { version = "4.5.54", features = ["derive"] }
derive_more = { version = "2.1.1", features = ["from_str"] }
eyre = "0.6.12"
futures = "0.3.31"
nom = "8.0.0"
object_store = { version = "0.13.1", features = ["aws", "azure", "fs", "gcp", "http"] }
parameterized = "2.1.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

[lib]
name = "data_validator_lib"
path = "src/lib.rs"

[[bin]]
name = "data_validator"
path = "src/main.rs"

[dev-dependencies]
pretty_assertions = "1.4.1"
